<resources>
    <string name="app_name">IndoorNavigation</string>
    <string name="search">Поиск</string>
    <string name="head">Главная</string>
    <string name="route">Маршрут</string>
    <string name="location">Локация</string>
    <string name="scan">Сканер</string>
    <string name="about_audience">Информация об аудитории</string>
    <string name="input_request">Введите запрос</string>
    <string name="route_from">Откуда</string>
    <string name="route_to">Куда</string>
    <string name="result_search">Результаты поиска</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="download_title">Для корректной работы приложения нам необходимо установить карту локации</string>
    <string name="downloading">Загрузка локации</string>
    <string name="unzip">Разархивация</string>
    <string name="connection_error">Сперва нужно подключиться к Интернету</string>
    <string name="zero_percent">0%</string>
    <string name="cancel">Отменить</string>
    <string name="yes">"Да"</string>
    <string name="no">"Нет"</string>
    <string name="go">Пройти</string>
    <string name="is_empty">"Кажется, тут пусто"</string>
</resources>