<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/splash_screen">

    <fragment android:id="@+id/splash_screen"
        android:name="com.trifonov.indoor_navigation.fragment.SplashScreen"
        android:label="@string/splash_screen"
        tools:layout="@layout/splash_screen_fragment">
        <action
            android:id="@+id/action_splash_to_head"
            app:popUpToInclusive="true"
            app:popUpTo="@id/mobile_navigation"
            app:destination="@+id/head"/>
    </fragment>


    <fragment android:id="@+id/head"
        android:name="com.trifonov.indoor_navigation.fragment.HeadFragment"
        android:label="@string/head"
        tools:layout="@layout/head_fragment"
    >
        <action
            android:id="@+id/action_head_to_route"
            app:destination="@id/route" />
        <action
            android:id="@+id/action_head_to_scan"
            app:destination="@id/scan" />
        <action
            android:id="@+id/action_head_to_search"
            app:destination="@id/search" />
        <action
            android:id="@+id/action_head_to_location"
            app:destination="@id/location" />
    </fragment>

    <fragment android:id="@+id/route"
        android:name="com.trifonov.indoor_navigation.fragment.RouteFragment"
        android:label="@string/route"
        tools:layout="@layout/route_fragment">

        <action
            android:id="@+id/action_route_to_scan"
            app:destination="@+id/scan"
            app:popUpTo="@id/route"
            app:popUpToInclusive="true"/>
    </fragment>


    <fragment android:id="@+id/search"
        android:name="com.trifonov.indoor_navigation.fragment.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/search_fragment">
        <action
            android:id="@+id/action_search_to_scan"
            app:destination="@+id/scan"
            app:popUpTo="@id/search"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment android:id="@+id/scan"
        android:name="com.trifonov.indoor_navigation.fragment.SelectedPointFragment"
        android:label="@string/scan"
        tools:layout="@layout/selected_point_fragment">
        <action
            android:id="@+id/action_scan_to_route"
            app:destination="@id/route"
            app:popUpTo="@id/scan"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment android:id="@+id/location"
        android:name="com.trifonov.indoor_navigation.fragment.LocationFragment"
        android:label="@string/location"
        tools:layout="@layout/location_fragment"/>
</navigation>